fix gap

--- a/app/globals.css
+++ b/app/globals.css
@@ -404,6 +404,9 @@ nav {
 
 .this-week-tasks,
 .later-tasks {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   width: 100%;
 }
 
